--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,44 +2,94 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.crm {
-    width: 500px;
+.helpdesk {
+    width: 700px;
 }
 
-.crm_title {
+.helpdesk__title {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 18px;
-}
-
-.crm_add {
-    font-size: 25px;
-}
-
-.crm_table {
-    width: 100%;
-    border: 1px rgb(187, 187, 187) solid;
-    border-radius: 5px;
-    border-collapse: collapse;
-    text-align: left;
-}
-
-.crm_table td {
-    border-bottom: 1px #cccccc solid;
-    padding: 8px 0px;
-}
-
-.crm_table .crm_edit, .crm_delete {
     font-size: 20px;
-    margin: 0px 3px;
 }
 
-.crm_add, .crm_edit, .crm_delete {
+.helpdesk__add {
+    font-size: 18px;
+    padding: 10px 15px;
+    background-color: rgb(0, 197, 115);
+    color: #ffffff;
+    border-radius: 10px;
     cursor: pointer;
 }
 
-.crm_modal {
+.helpdesk__item {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    font-size: 18px;
+    border: 1px solid #003a44;;
+    padding: 10px 5px;
+}
+
+.helpdesk__item__status {
+    width: 25px;
+    height: 25px;
+    border: 2px solid #003a44;
+    border-radius: 50%;
+    margin-right: 10px;
+    cursor: pointer;
+}
+.helpdesk__item__done {
+    background-color: rgb(19, 194, 92);
+}
+
+.helpdesk__item__name {
+    width: 410px;
+}
+
+.helpdesk__item__date {
+    margin: 0px 5px;
+}
+
+.helpdesk__item__controls {
+    display: flex;
+}
+
+.helpdesk__item__edit {
+    width: 25px;
+    height: 25px;
+    border: 2px solid #003a44;
+    border-radius: 20%;
+    font-size: 18px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.helpdesk__item__edit::after {
+    content: '✎';
+}
+
+.helpdesk__item__delete {
+    width: 25px;
+    height: 25px;
+    border: 2px solid #003a44;
+    border-radius: 20%;
+    margin-left: 5px;
+    font-size: 18px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.helpdesk__item__delete::after {
+    content: '✖';
+}
+
+.helpdesk__item__description {
+    width: 700px;
+    padding: 10px 230px 0px 40px;
+}
+
+.helpdesk__modal {
     display: flex;
     position: fixed;
     left: 0;
@@ -51,12 +101,8 @@ body {
     background: rgba(0, 0, 0, 0.5);
 }
 
-/* .crm_modal.active {
-    display: flex;
-} */
-
-.crm_form {
-    width: 300px;
+.helpdesk__form {
+    width: 500px;
     overflow: auto;
     background: #fff;
     position: relative;
@@ -65,13 +111,18 @@ body {
     padding: 20px;
 }
 
-.crm_form .label {
+.helpdesk__form h3 {
+    margin-bottom: 15px;
+    text-align: center;
+}
+
+.helpdesk__form .label {
     position: relative;
     font-size: 20px;
 }
 
-.crm_form input {
-    width: 300px;
+.helpdesk__form input, textarea {
+    width: 500px;
     box-sizing: border-box;
     padding: 5px 10px;
     margin-top: 10px;
@@ -80,21 +131,28 @@ body {
     font-size: 18px;
 }
 
-.crm_form .controls {
+.helpdesk__form textarea {
+    min-width: 500px;
+    max-width: 500px;
+    min-height: 80px;
+    max-height: 100px;
+}
+
+.helpdesk__form .controls {
     display: flex;
     justify-content: space-between;
 }
 
-.crm_form .controls button {
+.helpdesk__form .controls button {
     width: 120px;
     padding: 5px 10px;
     margin-top: 15px;
     font-size: 18px;
 }
 
-.crm_form .error {
+.helpdesk__form .error {
     position: absolute;
-    width: 300px;
+    width: 500px;
     box-sizing: border-box;
     background-color: brown;
     color: #ffffff;
